--- a/AAAReclamsO/Base.lproj/LaunchScreen.xib
+++ b/AAAReclamsO/Base.lproj/LaunchScreen.xib
@@ -8,17 +8,36 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KeV-N3-d8z">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash-ios.png" translatesAutoresizingMaskIntoConstraints="NO" id="KeV-N3-d8z">
+                    <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash_logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Hm0-cX-Ddy">
+                    <rect key="frame" x="334" y="462" width="100" height="100"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="QW8-GC-yJd"/>
+                        <constraint firstAttribute="height" constant="100" id="tGh-Lb-G96"/>
+                    </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="KeV-N3-d8z" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="20d-d2-4Fp"/>
+                <constraint firstItem="KeV-N3-d8z" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="3Sp-OU-Hex"/>
+                <constraint firstAttribute="trailing" secondItem="KeV-N3-d8z" secondAttribute="trailing" id="4ws-1b-s7b"/>
+                <constraint firstAttribute="bottom" secondItem="KeV-N3-d8z" secondAttribute="bottom" id="tKy-qk-Z7h"/>
+                <constraint firstAttribute="centerX" secondItem="Hm0-cX-Ddy" secondAttribute="centerX" id="wt4-yw-ajM"/>
+                <constraint firstAttribute="centerY" secondItem="Hm0-cX-Ddy" secondAttribute="centerY" id="z4L-2O-ZHw"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="iPad"/>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
+    <resources>
+        <image name="splash-ios.png" width="2048" height="2048"/>
+        <image name="splash_logo.png" width="303" height="368"/>
+    </resources>
 </document>
