--- a/AAAReclamsO/Base.lproj/Main.storyboard
+++ b/AAAReclamsO/Base.lproj/Main.storyboard
@@ -25,14 +25,14 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M2j-Gx-z10" userLabel="topbar">
-                                <rect key="frame" x="0.0" y="20" width="320" height="20"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j8b-n6-xzn" userLabel="privacy Button">
-                                        <rect key="frame" x="10" y="0.0" width="15" height="20"/>
+                                        <rect key="frame" x="10" y="0.0" width="23" height="30"/>
                                         <animations/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="15" id="4jA-PG-Dro"/>
-                                            <constraint firstAttribute="height" constant="20" id="f24-Lj-cdi"/>
+                                            <constraint firstAttribute="width" constant="23" id="4jA-PG-Dro"/>
+                                            <constraint firstAttribute="height" constant="30" id="f24-Lj-cdi"/>
                                         </constraints>
                                         <state key="normal" image="lock.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -42,12 +42,66 @@
                                             <action selector="privacyButtonPressed:" destination="7zJ-Rv-Ayp" eventType="touchUpInside" id="yV1-HW-gNp"/>
                                         </connections>
                                     </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZoV-eo-E5d" userLabel="purchasables">
+                                        <rect key="frame" x="110" y="0.0" width="100" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="woe-CU-lbz" userLabel="NoAds">
+                                                <rect key="frame" x="12" y="0.0" width="30" height="30"/>
+                                                <animations/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="A73-WX-Pz1"/>
+                                                    <constraint firstAttribute="width" constant="30" id="Tdt-8o-Bp2"/>
+                                                </constraints>
+                                                <state key="normal" image="buy_no_ads_btn.png"/>
+                                                <connections>
+                                                    <action selector="buyAdsBtnPressed:" destination="7zJ-Rv-Ayp" eventType="touchUpInside" id="aJW-7e-9f0"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="daS-vd-54t" userLabel="Restore">
+                                                <rect key="frame" x="58" y="0.0" width="30" height="30"/>
+                                                <animations/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="30" id="9Vt-Lq-uvE"/>
+                                                    <constraint firstAttribute="height" constant="30" id="qoO-ne-qa5"/>
+                                                </constraints>
+                                                <state key="normal" image="restore_purchases.png"/>
+                                                <connections>
+                                                    <action selector="restorePurchases:" destination="7zJ-Rv-Ayp" eventType="touchUpInside" id="FxU-6T-Epx"/>
+                                                </connections>
+                                            </button>
+                                            <view hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BkO-3K-UTk" userLabel="busyView">
+                                                <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
+                                                <subviews>
+                                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="Rur-S6-KhG">
+                                                        <rect key="frame" x="40" y="5" width="20" height="20"/>
+                                                        <animations/>
+                                                    </activityIndicatorView>
+                                                </subviews>
+                                                <animations/>
+                                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                                            </view>
+                                        </subviews>
+                                        <animations/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="BkO-3K-UTk" secondAttribute="trailing" id="3tr-eC-eqM"/>
+                                            <constraint firstItem="BkO-3K-UTk" firstAttribute="top" secondItem="ZoV-eo-E5d" secondAttribute="top" id="8n5-wJ-idq"/>
+                                            <constraint firstItem="woe-CU-lbz" firstAttribute="centerX" secondItem="ZoV-eo-E5d" secondAttribute="centerX" constant="-23" id="g0d-VS-4Jx"/>
+                                            <constraint firstAttribute="bottom" secondItem="BkO-3K-UTk" secondAttribute="bottom" id="odK-SR-krb"/>
+                                            <constraint firstItem="daS-vd-54t" firstAttribute="centerY" secondItem="ZoV-eo-E5d" secondAttribute="centerY" id="qag-uY-QFB"/>
+                                            <constraint firstItem="woe-CU-lbz" firstAttribute="centerY" secondItem="ZoV-eo-E5d" secondAttribute="centerY" id="tCc-l5-nHd"/>
+                                            <constraint firstAttribute="width" constant="100" id="un3-Sr-6O5"/>
+                                            <constraint firstItem="daS-vd-54t" firstAttribute="centerX" secondItem="ZoV-eo-E5d" secondAttribute="centerX" constant="23" id="yL4-WS-gXK"/>
+                                            <constraint firstItem="BkO-3K-UTk" firstAttribute="leading" secondItem="ZoV-eo-E5d" secondAttribute="leading" id="zkn-s9-bpp"/>
+                                        </constraints>
+                                    </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E1N-sK-0Vg" userLabel="refresh Button">
-                                        <rect key="frame" x="290" y="0.0" width="20" height="20"/>
+                                        <rect key="frame" x="280" y="0.0" width="30" height="30"/>
                                         <animations/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="8BU-Ux-nIV"/>
-                                            <constraint firstAttribute="width" constant="20" id="T6H-Cm-oec"/>
+                                            <constraint firstAttribute="height" constant="30" id="8BU-Ux-nIV"/>
+                                            <constraint firstAttribute="width" constant="30" id="T6H-Cm-oec"/>
                                         </constraints>
                                         <state key="normal" image="refresh.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -63,14 +117,17 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="E1N-sK-0Vg" secondAttribute="trailing" constant="10" id="7jW-3M-M2p"/>
                                     <constraint firstAttribute="bottom" secondItem="j8b-n6-xzn" secondAttribute="bottom" id="Pfb-zf-YIx"/>
+                                    <constraint firstItem="ZoV-eo-E5d" firstAttribute="top" secondItem="M2j-Gx-z10" secondAttribute="top" id="VuR-lC-lXM"/>
                                     <constraint firstItem="E1N-sK-0Vg" firstAttribute="top" secondItem="M2j-Gx-z10" secondAttribute="top" id="XiC-4S-STH"/>
                                     <constraint firstItem="j8b-n6-xzn" firstAttribute="leading" secondItem="M2j-Gx-z10" secondAttribute="leading" constant="10" id="kxx-hb-UpA"/>
                                     <constraint firstItem="j8b-n6-xzn" firstAttribute="top" secondItem="M2j-Gx-z10" secondAttribute="top" id="m3Q-wg-oQo"/>
+                                    <constraint firstItem="ZoV-eo-E5d" firstAttribute="centerX" secondItem="M2j-Gx-z10" secondAttribute="centerX" id="nxo-Q2-vzD"/>
+                                    <constraint firstAttribute="bottom" secondItem="ZoV-eo-E5d" secondAttribute="bottom" id="oZR-As-wK0"/>
                                     <constraint firstAttribute="bottom" secondItem="E1N-sK-0Vg" secondAttribute="bottom" id="vO1-0v-but"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VBQ-9U-Cwl" customClass="iCarousel">
-                                <rect key="frame" x="0.0" y="40" width="320" height="426"/>
+                                <rect key="frame" x="0.0" y="50" width="320" height="416"/>
                                 <animations/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
@@ -422,7 +479,7 @@
                             <constraint firstItem="T6R-v1-bcj" firstAttribute="top" secondItem="h6O-Se-vnM" secondAttribute="bottom" id="sOW-Ws-yxM"/>
                             <constraint firstAttribute="trailing" secondItem="AGx-Nj-mhU" secondAttribute="trailing" id="yPU-Zw-EQN"/>
                             <constraint firstAttribute="trailing" secondItem="h6O-Se-vnM" secondAttribute="trailing" id="yhC-WL-kEA"/>
-                            <constraint firstItem="VBQ-9U-Cwl" firstAttribute="top" secondItem="JhD-bm-KuR" secondAttribute="bottom" constant="20" id="zLh-Yy-Bkp"/>
+                            <constraint firstItem="VBQ-9U-Cwl" firstAttribute="top" secondItem="JhD-bm-KuR" secondAttribute="bottom" constant="30" id="zLh-Yy-Bkp"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" image="first" id="q9j-H4-nzW"/>
@@ -441,6 +498,7 @@
                         <outlet property="marketsScrollSuperView" destination="AGx-Nj-mhU" id="L8L-Yf-eDI"/>
                         <outlet property="marketsScrollView" destination="1IV-49-Hvk" id="9HP-L5-lbO"/>
                         <outlet property="marketsViewHeightConstraint" destination="v9D-Cx-ECY" id="Fu7-O5-MCV"/>
+                        <outlet property="noAdsBusyView" destination="BkO-3K-UTk" id="hab-Id-i0s"/>
                         <outlet property="selectView" destination="IiU-qH-vpQ" id="Wni-R3-vVW"/>
                         <outlet property="topBar" destination="M2j-Gx-z10" id="0b4-7Z-xlD"/>
                     </connections>
@@ -1094,6 +1152,7 @@
         <image name="badge2.png" width="78" height="78"/>
         <image name="bg.png" width="320" height="568"/>
         <image name="burger_btn.png" width="62" height="44"/>
+        <image name="buy_no_ads_btn.png" width="205" height="205"/>
         <image name="first" width="30" height="30"/>
         <image name="lock.png" width="44" height="58"/>
         <image name="lock_highlight.png" width="44" height="58"/>
@@ -1106,6 +1165,7 @@
         <image name="refresh.png" width="128" height="128"/>
         <image name="refresh_highlight.png" width="128" height="128"/>
         <image name="remove.png" width="50" height="50"/>
+        <image name="restore_purchases.png" width="205" height="205"/>
         <image name="swipe_left_right.png" width="128" height="128"/>
         <image name="tap.png" width="128" height="128"/>
     </resources>
